# calligraphy

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  test.script
.github/workflows/: makefile.yml
caligraphy/: __init__.py  cleaner.py  cli.py  parser.py  tokenizer.py  transpiler.py
caligraphy/data/: header.py
calligraphy/: __init__.py  cleaner.py  cli.py  parser.py  transpiler.py
calligraphy_scripting/: __init__.py  cleaner.py  cli.py  parser.py  runner.py  tokenizer.py  transpiler.py  utils.py
calligraphy_scripting/data/: header.py
docs/source/: conf.py  examples.rst  index.rst  reference.rst  usage.rst  writing.rst
examples/: build_microservices.script  get_pod_resources.script
img/: README.md
tests/: test_caligraphy.py  test_cli.py  test_runner.py  test_tokenizer.py
tests/data/: cli.cli.flag_conflict.out  cli.cli.help.out  cli.cli.no_program.out  cli.exception.out  cli.execute.out  cli.explain.out  cli.explain.stdin.out  cli.explain2.out  cli.help_flag.out  cli.intermediate.out  cli.intermediate.stdin.out  cli.shellopts.err  cli.version.out  runner.execute.out  test.script  test2.script  test3.script  test4.script  test5.script  test6.script  test7.script
