[tool.poetry]
name = "caligraphy"
version = "0.1.0"
description = ""
authors = ["John Carter <jfcarter2358@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
coverage = "^6.3.2"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
caligraphy = "caligraphy.cli:cli"


