[tool.poetry]
name = "calligraphy-scripting"
version = "1.1.3"
description = "A hybrid language for a modern approach to shell scripting"
authors = ["John Carter <jfcarter2358@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jfcarter2358/calligraphy"
keywords = ["scripting", "calligraphy"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"
Sphinx = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calligraphy = "calligraphy_scripting.cli:cli"


